# data_pipeline

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md
.devcontainer/: Dockerfile  devcontainer.json
src/: manager.py
src/config/: config.json  config_medical.json
src/pipeline/stages/: data_acquisition.py  interface.py  postprocessing.py  preprocessing.py
